fix: 🐛 z-index of .mw-search-form-wrapper

--- a/skinStyles/mediawiki/special/mediawiki.special.search.styles.less
+++ b/skinStyles/mediawiki/special/mediawiki.special.search.styles.less
@@ -19,7 +19,7 @@
 // Sticky header
 .mw-search-form-wrapper {
 	position: sticky;
-	z-index: @z-index-page-header;
+	z-index: 11; // @z-index-page-header - 1
 	top: ~'calc( var( --header-size ) - 1px )';
 	padding: var( --space-md ) 0;
 	border-bottom: 1px solid var( --border-color-base );
